--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   just_audio: ^0.9.46
   flutter_native_splash: ^2.4.5
+  file_picker: ^10.1.2
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
